<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000A25">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/adminimage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/welcome_admin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="321dp"
        android:layout_height="150dp"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="serif"
            android:text="@string/browse_events"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="serif"
            android:text="@string/browse_profiles"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="serif"
            android:text="@string/browse_images"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>