<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000A25"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="384dp"
        android:layout_height="435dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/applogo" />

    <LinearLayout
        android:layout_width="321dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="serif"
            android:text="@string/attend_events"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="serif"
            android:text="@string/organize_events"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="serif"
            android:text="@string/administrator"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>